manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstoneapp-ingress
  namespace: capstoneapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: danushvithiyarth.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capstone-application-service
            port:
              number: 80
